--- a/drivers/soc/google/cpif/Kconfig
+++ b/drivers/soc/google/cpif/Kconfig
@@ -131,6 +131,13 @@ config LINK_DEVICE_PCIE_S2MPU
 	help
 	  Gate some addresses AP and CP shared
 
+config LINK_DEVICE_PCIE_IOMMU
+	bool "Use PCIE IOMMU"
+	depends on LINK_DEVICE_PCIE && EXYNOS_PCIE_IOMMU
+	default n
+	help
+	  This enables PCIe IOMMU
+
 config CPIF_CHECK_SJTAG_STATUS
 	tristate "Check secure JTAG status to disable CP memory dump"
 	default n
