arm64/dts: gs201: tpu: add gsa device
Add the GSA device to enable firmware authentication.

Bug: 194054015

Signed-off-by: Erick Reyes <erickreyes@google.com>
Change-Id: I6794e238f6f3d185bcd5007238a2e19a7cf14111

--- a/arch/arm64/boot/dts/google/gs201-tpu.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-tpu.dtsi
@@ -31,6 +31,7 @@
 		status = "okay";
 		memory-region = <&tpu_fw_reserved>, <&tpu_fw_ctx_reserved>;
 		edgetpu,shareability = <0x1cc20000>;
+		gsa-device = <&gsa>;
 		tpu_dvfs_table_size = <7 2>; /*<row col>*/
 		/*
 		 * DVFS values calculated from average power with real-world workloads
