--- a/arch/arm64/Makefile.postlink
+++ b/arch/arm64/Makefile.postlink
@@ -27,6 +27,14 @@ quiet_cmd_gen_hmac = HMAC    $@
 	--set-section-flags=.init.rela.rodata=alloc,readonly && \
 	$(CMD_FIPS140_GEN_HMAC) $@
 
+CMD_UFS_PIXEL_FIPS_GEN_HMAC = drivers/scsi/ufs/ufs-pixel-fips_gen_hmac
+quiet_cmd_pixel_ufs_gen_hmac = HMAC    $@
+      cmd_pixel_ufs_gen_hmac = $(OBJCOPY) $@ \
+	--dump-section=$(shell $(READELF) -SW $@|grep -Eo '\.rela\.text\S*')=$@.rela.text \
+	--add-section=.init.rela.text=$@.rela.text \
+	--set-section-flags=.init.rela.text=alloc,readonly && \
+	$(CMD_UFS_PIXEL_FIPS_GEN_HMAC) $@
+
 # `@true` prevents complaints when there is nothing to be done
 
 vmlinux: FORCE
@@ -35,11 +43,14 @@ vmlinux: FORCE
 $(objtree)/crypto/fips140.ko: FORCE
 	$(call cmd,gen_hmac)
 
+$(objtree)/drivers/scsi/ufs/ufs-pixel-fips140.ko: FORCE
+	$(call cmd,pixel_ufs_gen_hmac)
+
 %.ko: FORCE
 	@true
 
 clean:
-	rm -f $(objtree)/crypto/fips140.ko.rela.*
+	rm -f $(objtree)/crypto/fips140.ko.rela.* $(objtree)/drivers/scsi/ufs/ufs-pixel-fips140.ko.rela.text
 
 PHONY += FORCE clean
 
