build.config: Add a new module dependency for aoc/usb
Commit ("aoc: usb: implement usb suspend/resume hooks") in the
aoc git repository adds a new dependency.  Add a new order-only
prerequisite in Makefile accordingly.

Bug: 199698959
Change-Id: I917c88321488b096dc83d7ca1a0e4951414f9599
Signed-off-by: Alex Hong <rurumihong@google.com>

--- a/Makefile.ext_modules.slider
+++ b/Makefile.ext_modules.slider
@@ -41,7 +41,7 @@ allmodules: $(ext_modules) $(install_uapi_headers_targets) depmod
 
 aoc/alsa: | aoc
 
-aoc/usb: | aoc
+aoc/usb: | aoc/alsa aoc
 
 power/reset: | bms
 
