--- a/drivers/scsi/ufs/Makefile
+++ b/drivers/scsi/ufs/Makefile
@@ -29,3 +29,9 @@ obj-$(CONFIG_SCSI_UFS_EXYNOS) += ufs-exynos-core.o
 ufs-exynos-core-y += ufs-exynos.o ufs-exynos-dbg.o ufs-pixel.o
 ufs-exynos-core-$(CONFIG_SOC_GS101) += gs101/ufs-cal-if.o
 ufs-exynos-core-$(CONFIG_SCSI_UFS_CRYPTO) += ufs-pixel-crypto.o ufs-exynos-fmp.o
+
+obj-$(CONFIG_SCSI_UFS_PIXEL_FIPS140) += ufs-pixel-fips140.o
+ufs-pixel-fips140-y += ufs-pixel-fips.o
+# Use -DBUILD_FIPS140_KO to disable dynamic code patching as that would
+# invalidate the hash of the module's .text section
+CFLAGS_ufs-pixel-fips.o += -DBUILD_FIPS140_KO
