scsi: ufs: add ufs fmp acvp module
Add a module to support ACVP tests on UFS Flash Memory Protector inline
encryption engine. The module provides ioctl interface to issue the
following cryptographic requests:

* SHA-256
* HMAC-SHA-256
* SHA-256 Monte Carlo
* AES-256-XTS encrypt/decrypt

The hashing requests are handled by the UFS FIPS module, with
AES-256-XTS requests handled by the Flash Memory Protector HW.
The Flash Memory Protector HW is capable of performing AES-128-XTS,
AES-128-CBC, AES-256-CBC algorithms as well, however these algorithms
will not be validated as they are not used by the system.

Bug: 202417931
Signed-off-by: Konstantin Vyshetsky <vkon@google.com>
Change-Id: Ic50fd693ee75ae429fbf76aa800efc8ee3c4f089

--- a/drivers/scsi/ufs/Kconfig
+++ b/drivers/scsi/ufs/Kconfig
@@ -216,4 +216,12 @@ config SCSI_UFS_PIXEL_FIPS140
 	  test for cases where the hardware component does not support
 	  the functionality natively.
 
+config SCSI_UFS_PIXEL_ACVP
+	tristate "Build FIPS 140 ACVP Module"
+	depends on m && SCSI_UFS_PIXEL_FIPS140
+	help
+	  Build a module to enable testing UFS crypto engine for ACVP
+	  certification. This module should be built to perform testing and
+	  should not be included in a release build.
+
 endif
