--- a/arch/arm64/boot/dts/google/gs201.dtsi
+++ b/arch/arm64/boot/dts/google/gs201.dtsi
@@ -1530,6 +1530,14 @@
 					type = "hot";
 				};
 			};
+			cooling-maps {
+				map0 {
+					trip = <&gpu_control_temp>;
+					cooling-device = <&mali
+						THERMAL_NO_LIMIT
+						THERMAL_NO_LIMIT>;
+				};
+			};
 		};
 		isp_thermal: ISP {
 			zone_name  = "ISP_THERMAL";
