arm64/dts: declare EEPROM m24c64x driver as read only
Bug: 203716034
Bug: 195726151
Test: CTS, Fuzzing, GCA
Signed-off-by: Nick Chung <nickchung@google.com>
Change-Id: Id4aa3785dd0e2037ccd3d239c71fcde49db77819

--- a/arch/arm64/boot/dts/google/gs101-raven-camera-proto1.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-raven-camera-proto1.dtsi
@@ -294,6 +294,9 @@
 				/* I2C */
 				i2c-addr = <0x50>;
 
+				/* Access mode property*/
+				lwis,read-only;
+
 				/* Power supplies */
 				ldo7-supply = <&slg51000_ldo7>;
 
@@ -316,6 +319,9 @@
 
 			/* Eeprom m24c64x for imx386 */
 			eeprom2: eeprom@2 {
+				/* Access mode property*/
+				lwis,read-only;
+
 				/* Power supplies */
 				ldo7-supply = <&slg51000_ldo7>;
 
