--- a/arch/arm64/boot/dts/google/gs101-raven-camera.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-raven-camera.dtsi
@@ -503,6 +503,9 @@
 				i2c-bus = <&hsi2c_2>;
 				i2c-addr = <0x51>;
 
+				/* Access mode property*/
+				lwis,read-only;
+
 				/* Registers */
 				reg-addr-bitwidth = <16>;
 				reg-value-bitwidth = <8>;
@@ -541,6 +544,9 @@
 				/* Registers */
 				reg-addr-bitwidth = <16>;
 				reg-value-bitwidth = <8>;
+
+				/* Access mode property*/
+				lwis,read-only;
 
 				/* Power supplies */
 				ldo1-supply = <&slg51000_ldo1>;
