Add gxp/gs201 external module to Cloudripper
Bug: 202349046
Signed-off-by: John Scheible <johnscheible@google.com>
Change-Id: Ic4c4cb07af3e967f563ee80648d100b0fb5bd450

--- a/Makefile.ext_modules.cloudripper
+++ b/Makefile.ext_modules.cloudripper
@@ -16,6 +16,7 @@ ext_modules += display/samsung
 ext_modules += edgetpu/janeiro/drivers/edgetpu
 ext_modules += gpu/mali_kbase
 ext_modules += gpu/mali_pixel
+ext_modules += gxp/gs201
 ext_modules += lwis
 ext_modules += nfc
 ext_modules += power/reset
