arm64/dts: gs201: Add EVT/DVT/PVT/MP support
Add evt1, evt1-wingboard, evt1-1, dvt1, pvt1, mp dts for C10/P10

Bug: 204843924
Test: Verified the dtbo image on c10 proto1 and p10 proto1.1 device
Signed-off-by: Ryan Chu <churyan@google.com>
Change-Id: I9c3e039203dee11faf8789dc3724f99c2e8f9e9c

--- a/arch/arm64/boot/dts/google/Makefile
+++ b/arch/arm64/boot/dts/google/Makefile
@@ -64,10 +64,22 @@ dtbo-$(CONFIG_BOARD_CLOUDRIPPER) += \
         gs201-ravenclaw-dev1_1.dtbo \
         gs201-cheetah-proto1.dtbo \
         gs201-cheetah-proto1_1.dtbo \
-	gs201-cheetah-proto1_1-wingboard.dtbo \
+        gs201-cheetah-proto1_1-wingboard.dtbo \
+        gs201-cheetah-evt1.dtbo \
+        gs201-cheetah-evt1-wingboard.dtbo \
+        gs201-cheetah-evt1_1.dtbo \
+        gs201-cheetah-dvt1.dtbo \
+        gs201-cheetah-pvt1.dtbo \
+        gs201-cheetah-mp.dtbo \
         gs201-panther-proto1.dtbo \
         gs201-panther-proto1_1.dtbo \
-        gs201-panther-proto1_1-wingboard.dtbo
+        gs201-panther-proto1_1-wingboard.dtbo \
+        gs201-panther-evt1.dtbo \
+        gs201-panther-evt1-wingboard.dtbo \
+        gs201-panther-evt1_1.dtbo \
+        gs201-panther-dvt1.dtbo \
+        gs201-panther-pvt1.dtbo \
+        gs201-panther-mp.dtbo
 
 dtbo-$(CONFIG_BOARD_GS201_EMULATOR) += \
         gs201-emulator.dtbo
@@ -81,9 +93,21 @@ gs201-ravenclaw-dev1_1.dtbo-base := gs201-a0.dtb
 gs201-cheetah-proto1.dtbo-base := gs201-a0.dtb
 gs201-cheetah-proto1_1.dtbo-base := gs201-a0.dtb
 gs201-cheetah-proto1_1-wingboard.dtbo-base := gs201-a0.dtb
+gs201-cheetah-evt1.dtbo-base := gs201-a0.dtb
+gs201-cheetah-evt1-wingboard.dtbo-base := gs201-a0.dtb
+gs201-cheetah-evt1_1.dtbo-base := gs201-a0.dtb
+gs201-cheetah-dvt1.dtbo-base := gs201-a0.dtb
+gs201-cheetah-pvt1.dtbo-base := gs201-a0.dtb
+gs201-cheetah-mp.dtbo-base := gs201-a0.dtb
 gs201-panther-proto1.dtbo-base := gs201-a0.dtb
 gs201-panther-proto1_1.dtbo-base := gs201-a0.dtb
 gs201-panther-proto1_1-wingboard.dtbo-base := gs201-a0.dtb
+gs201-panther-evt1.dtbo-base := gs201-a0.dtb
+gs201-panther-evt1-wingboard.dtbo-base := gs201-a0.dtb
+gs201-panther-evt1_1.dtbo-base := gs201-a0.dtb
+gs201-panther-dvt1.dtbo-base := gs201-a0.dtb
+gs201-panther-pvt1.dtbo-base := gs201-a0.dtb
+gs201-panther-mp.dtbo-base := gs201-a0.dtb
 gs201-emulator.dtbo-base := gs201-a0.dtb
 gs201-hybrid.dtbo-base := gs201-a0.dtb
 
