arm64/dts: panther: set 1102 Mbps DSI rate
Set 1102 Mbps DSI rate.

Bug: 202746442
Test: adb shell cat /sys/devices/platform/1c2c0000.drmdsim/hs_clock
Signed-off-by: William Tai <williamtai@google.com>
Change-Id: Ia0cde9509812f05499daf1bd4a1cae782536ad48

--- a/arch/arm64/boot/dts/google/gs201-panther-display.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-display.dtsi
@@ -28,4 +28,17 @@
 	};
 };
 
+&dsim_modes {
+	dsim-modes {
+		1080x2400 {
+			mode-name = "1080x2400";
+			pmsk = <
+				0x2 0xB3 0x2 0x5CAB /* p m s k */
+				>;
+			hs-clk = <1102>;
+			esc-clk = <20>;
+		};
+	};
+};
+
 
