arm64/dts: Update camera mclk drive strength for P10
Set RCAM (MCLK4) and UW (MCLK1) to 5mA and keep FCAM (MCLK2) as 2.5mA.

Bug: 203115826
Test: Camera streaming.
Signed-off-by: Xu Han <xuhanyz@google.com>
Change-Id: Ia4162c7a70cbf1503aadb888e1c01c28a223b753

--- a/arch/arm64/boot/dts/google/gs201-panther-camera.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-camera.dtsi
@@ -76,6 +76,19 @@
 		samsung,pin-pud = <EXYNOS_PIN_PULL_NONE>;
 		samsung,pin-drv = <GS101_PIN_DRV_2_5_MA>;
 	};
+
+	sensor_mclk1_out: sensor-mclk1-out {
+		samsung,pin-drv = <GS101_PIN_DRV_5_MA>;
+	};
+	sensor_mclk1_fn: sensor-mclk1-fn {
+		samsung,pin-drv = <GS101_PIN_DRV_5_MA>;
+	};
+	sensor_mclk4_out: sensor-mclk4-out {
+		samsung,pin-drv = <GS101_PIN_DRV_5_MA>;
+	};
+	sensor_mclk4_fn: sensor-mclk4-fn {
+		samsung,pin-drv = <GS101_PIN_DRV_5_MA>;
+	};
 };
 
 &hsi2c_1 {
