arm64/dts: switch tpu_secure to chunk heap
Bug: 205009850
Signed-off-by: Jidong Sun <jidong@google.com>
Change-Id: Ieb9e07205bcc25c88275c0ee4ad98322bb0c96eb

--- a/arch/arm64/boot/dts/google/gs101-dma-heap.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-dma-heap.dtsi
@@ -55,7 +55,7 @@
 	};
 
 	faceauth_tpu_dma_heap: faceauth_tpu_dma_heap {
-		compatible = "samsung,dma-heap-cma";
+		compatible = "samsung,dma-heap-chunk";
 		memory-region = <&faceauth_tpu>;
 		dma-heap,name = "faceauth_tpu";
 		dma-heap,secure;
