arm64/dts: Update camera power sequence
CAMIO is required to rise first and fall last.

Remove AF and OIS power from RCAM GN1's node.

Bug: 204904599
Bug: 204906425
Test: camera stream.
Signed-off-by: Xu Han <xuhanyz@google.com>
Change-Id: I53320c085d0bec768b7c84c114730b39bb4e088b

--- a/arch/arm64/boot/dts/google/gs201-panther-camera.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-camera.dtsi
@@ -185,8 +185,6 @@
 				/* Power supplies */
 				s2mpg13_ldo12-supply = <&s_ldo12_reg>;
 				ldo1-supply = <&slg51002_ldo1>;
-				ldo3-supply = <&slg51002_ldo3>;
-				ldo4-supply = <&slg51002_ldo4>;
 				ldo8-supply = <&slg51002_ldo8>;
 				gpio3-supply = <&slg51002_gpio3>;
 
@@ -207,17 +205,13 @@
 
 				/* Power up sequence */
 				power-up-seqs =
+					"s2mpg13_ldo12",
 					"gpio3",
 					"ldo8",
 					"ldo1",
-					"ldo3",
-					"ldo4",
-					"s2mpg13_ldo12",
 					"reset",
 					"mclk_on";
 				power-up-seq-types =
-					"regulator",
-					"regulator",
 					"regulator",
 					"regulator",
 					"regulator",
@@ -227,8 +221,6 @@
 				power-up-seq-delays-us =
 					<1000
 					 0
-					 1000
-					 1000
 					 0
 					 0
 					 1000
@@ -238,17 +230,13 @@
 				power-down-seqs =
 					"mclk_off",
 					"reset",
-					"s2mpg13_ldo12",
-					"ldo4",
-					"ldo3",
 					"ldo1",
 					"ldo8",
-					"gpio3";
+					"gpio3",
+					"s2mpg13_ldo12";
 				power-down-seq-types =
 					"pinctrl",
 					"gpio",
-					"regulator",
-					"regulator",
 					"regulator",
 					"regulator",
 					"regulator",
@@ -259,9 +247,7 @@
 					 0
 					 0
 					 1000
-					 1000
-					 0
-					 1000>;
+					 0>;
 			};
 
 			/* FRONT CAMERA 3J1 */
@@ -304,9 +290,9 @@
 
 				/* Power up sequence */
 				power-up-seqs =
+					"s2mpg13_ldo12",
 					"ldo7",
 					"ldo5",
-					"s2mpg13_ldo12",
 					"mclk_on",
 					"reset";
 				power-up-seq-types =
@@ -316,7 +302,7 @@
 					"pinctrl",
 					"gpio";
 				power-up-seq-delays-us =
-					<0
+					<1000
 					 1000
 					 1000
 					 1000
@@ -326,9 +312,9 @@
 				power-down-seqs =
 					"reset",
 					"mclk_off",
-					"s2mpg13_ldo12",
 					"ldo5",
-					"ldo7";
+					"ldo7",
+					"s2mpg13_ldo12";
 				power-down-seq-types =
 					"gpio",
 					"pinctrl",
@@ -447,12 +433,12 @@
 
 				/* Power up sequence */
 				power-up-seqs =
+					"s2mpg13_ldo12",
 					"gpio3",
 					"ldo8",
 					"ldo1",
 					"ldo3",
-					"ldo4",
-					"s2mpg13_ldo12";
+					"ldo4";
 				power-up-seq-types =
 					"regulator",
 					"regulator",
@@ -470,12 +456,12 @@
 
 				/* Power down sequence */
 				power-down-seqs =
-					"s2mpg13_ldo12",
 					"ldo4",
 					"ldo3",
 					"ldo1",
 					"ldo8",
-					"gpio3";
+					"gpio3",
+					"s2mpg13_ldo12";
 				power-down-seq-types =
 					"regulator",
 					"regulator",
