arm64/dts: gs201: add reserved-mem for cp and aoc
Bug: 200287610

Signed-off-by: SalmaxChang <salmaxchang@google.com>
Change-Id: I2ad82da87e7fbf717f8382b8464be2689768e12f

--- a/arch/arm64/boot/dts/google/gs201-cp-s5300-sit.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cp-s5300-sit.dtsi
@@ -451,7 +451,11 @@
 			cp_shmem {
 				compatible = "samsung,exynos-cp-shmem";
 
-				memory-region = <&cp_rmem>, <&cp_msi_rmem>, <&cp_rmem_1>;
+				memory-region =
+					<&cp_rmem>,
+					<&cp_msi_rmem>,
+					<&cp_rmem_1>,
+					<&cp_aoc_rmem>;
 
 				cp_num = <0>;
 				use_mem_map_on_cp = <0>;
@@ -488,6 +492,14 @@
 						region,offset = <0x01C00000>;
 						region,size = <0x00400000>;
 						/* Cached info is defined by pktproc_ul itself */
+					};
+					vss_aoc {
+						region,name = "VSS_AOC";
+						region,index = <SHMEM_VSS>;
+						region,rmem = <3>;
+						region,offset = <0x00000000>;
+						region,size = <0x00003000>;
+						region,cached = <0>;
 					};
 				};
 			};
