--- a/arch/arm64/boot/dts/google/gs201-rmem.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-rmem.dtsi
@@ -112,6 +112,12 @@
 			rmem_index = <2>;
 		};
 
+		cp_aoc_rmem: cp_aoc_rmem {
+			compatible = "exynos,modem_if";
+			reg = <0x0 0x197FD000 0x00003000>;
+			rmem_index = <3>;
+		};
+
 		debug_snapshot {
 			#address-cells = <2>;
 			#size-cells = <1>;
