--- a/arch/arm64/boot/dts/google/gs201-panther-common.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-common.dtsi
@@ -28,4 +28,5 @@
 #include "gs201-panther-thermal.dtsi"
 #include "gs201-panther-audio.dtsi"
 #include "gs101-faceauth-dma-heap.dtsi"
+#include "gs201-panther-battery.dtsi"
 #include "gs201-panther-charging.dtsi"
