arm64/dts: gs101: pkvm: Add S2MPU DT nodes
Add DeviceTree nodes for the S2MPUs present in gs101, compatible with
the 'google,s2mpu' driver present in GKI's KVM. This driver is only
initialized if the device booted with pKVM enabled. pKVM will not ship
on gs101 but gs101 is used for testing/dogfooding.

Bug: 190463801
Bug: 192819132
Test: builds, boots, no crashes observed
Signed-off-by: David Brazdil <dbrazdil@google.com>
Change-Id: Ieb94548b23d76b3d2e4360483b7825c2a94df0fd

--- a/arch/arm64/boot/dts/google/gs101-b0.dts
+++ b/arch/arm64/boot/dts/google/gs101-b0.dts
@@ -54,3 +54,16 @@
 &ufs {
 	evt-ver = /bits/ 8 <1>;
 };
+
+&s2mpu_g3d0 {
+	reg = <0x0 0x20080000 0x10000>;
+};
+&s2mpu_g3d1 {
+	reg = <0x0 0x20090000 0x10000>;
+};
+&s2mpu_g3d2 {
+	reg = <0x0 0x200A0000 0x10000>;
+};
+&s2mpu_g3d3 {
+	reg = <0x0 0x200B0000 0x10000>;
+};
