--- a/arch/arm64/boot/dts/google/gs101-a0.dts
+++ b/arch/arm64/boot/dts/google/gs101-a0.dts
@@ -52,3 +52,16 @@
 &mfc_core0 {
 	ip_ver = <0x14020000>;
 };
+
+&s2mpu_g3d0 {
+	reg = <0x0 0x20090000 0x10000>;
+};
+&s2mpu_g3d1 {
+	reg = <0x0 0x200A0000 0x10000>;
+};
+&s2mpu_g3d2 {
+	reg = <0x0 0x200B0000 0x10000>;
+};
+&s2mpu_g3d3 {
+	reg = <0x0 0x200C0000 0x10000>;
+};
