arm64: dts: google: gs201: link TPU cooling device in TMU zone
Test: boot and test with TPU work load
Bug: 205030594
Signed-off-by: Sayanna Chandula <sayanna@google.com>
Change-Id: Ie0ae1ed3f94f2b52dc836d61e8079769c0f20913

--- a/arch/arm64/boot/dts/google/gs201.dtsi
+++ b/arch/arm64/boot/dts/google/gs201.dtsi
@@ -1633,6 +1633,12 @@
 					type = "hot";
 				};
 			};
+			cooling-maps {
+				map0 {
+					trip = <&tpu_control_temp>;
+					cooling-device = <&tpu_cooling 0 0>;
+				};
+			};
 		};
 	};
 
