arm64/dts: add input-current-limit and irdrop settings
Bug: 204913713
Signed-off-by: Jenny Ho <hsiufangho@google.com>
Change-Id: I8cf7fbf488ca7ca17318542d682f80a87f234ad7

--- a/arch/arm64/boot/dts/google/gs201-cheetah-common.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-common.dtsi
@@ -32,3 +32,4 @@
 #include "gs201-cheetah-audio.dtsi"
 #include "gs201-cheetah-battery.dtsi"
 #include "gs101-faceauth-dma-heap.dtsi"
+#include "gs201-cheetah-charging.dtsi"
