arm64/dts: enable filtercfg adjustment feature
Bug: 205852816
Bug: 205853069
Signed-off-by: Jenny Ho <hsiufangho@google.com>
Change-Id: I400a45b8062ffdc56d48d7f700c7f047ea7f9002

--- a/arch/arm64/boot/dts/google/gs101-raviole-battery.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-raviole-battery.dtsi
@@ -158,6 +158,10 @@
 		maxim,batt-id-range-pct = <0>;
 
 		maxim,psy-type-unknown;
+		maxim,filtercfg-temp = <100>;
+		maxim,filtercfg-temp-hysteresis = <30>;
+		maxim,filtercfg-default = /bits/ 16 <0xc623>;
+		maxim,filtercfg-adjust = /bits/ 16 <0xc615>;
 		maxim,fg-data {
 			#include "gs101-fake-battery-data.dtsi"
 		};
