--- a/arch/arm64/boot/dts/google/gs101-dma-heap.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-dma-heap.dtsi
@@ -53,6 +53,56 @@
 		dma-heap,protection_id = <20>;
 		dma-heap,alignment = <0x10000>;
 	};
+
+	faceauth_tpu_dma_heap: faceauth_tpu_dma_heap {
+		compatible = "samsung,dma-heap-cma";
+		memory-region = <&faceauth_tpu>;
+		dma-heap,name = "faceauth_tpu";
+		dma-heap,secure;
+		dma-heap,protection_id = <15>;
+		dma-heap,alignment = <0x10000>;
+		status = "disabled";
+	};
+
+	faceauth_image_heap: faceauth_image_heap {
+		compatible = "samsung,dma-heap-cma";
+		memory-region = <&faimg>;
+		dma-heap,name = "faimg";
+		dma-heap,secure;
+		dma-heap,protection_id = <16>;
+		dma-heap,alignment = <0x10000>;
+		status = "disabled";
+	};
+
+	faceauth_rawimage_heap: faceauth_rawimage_heap {
+		compatible = "samsung,dma-heap-cma";
+		memory-region = <&farawimg>;
+		dma-heap,name = "farawimg";
+		dma-heap,secure;
+		dma-heap,protection_id = <17>;
+		dma-heap,alignment = <0x10000>;
+		status = "disabled";
+	};
+
+	faceauth_preview_heap: faceauth_preview_heap {
+		compatible = "samsung,dma-heap-cma";
+		memory-region = <&faprev>;
+		dma-heap,name = "faprev";
+		dma-heap,secure;
+		dma-heap,protection_id = <18>;
+		dma-heap,alignment = <0x10000>;
+		status = "disabled";
+	};
+
+	faceauth_model_heap: faceauth_model_heap {
+		compatible = "samsung,dma-heap-carveout";
+		memory-region = <&famodel>;
+		dma-heap,name = "famodel";
+		dma-heap,dynamic-secure;
+		dma-heap,protection_id = <19>;
+		dma-heap,alignment = <0x10000>;
+		status = "disabled";
+	};
 };
 
 &reserved_memory {
@@ -102,5 +152,63 @@
 		compatible = "shared-dma-pool";
 		reg = <0x0 0x97000000 0x400000>;
 		no-map;
+	};
+
+	faceauth_tpu: faceauth_tpu {
+		compatible = "shared-dma-pool";
+		reusable;
+		size = <0x2000000>;
+		alignment = <0x0 0x00010000>;
+		alloc-ranges = <0x9 0x80000000 0x80000000>,
+			       <0x9 0x00000000 0x80000000>,
+			       <0x8 0x80000000 0x80000000>,
+			       <0x0 0x80000000 0x80000000>;
+		status = "disabled";
+	};
+
+	famodel: famodel {
+		size = <0x3C00000>;
+		alignment = <0x0 0x00010000>;
+		alloc-ranges = <0x9 0x80000000 0x80000000>,
+			       <0x9 0x00000000 0x80000000>,
+			       <0x8 0x80000000 0x80000000>,
+			       <0x0 0x80000000 0x80000000>;
+		status = "disabled";
+	};
+
+	faimg: faimg {
+		compatible = "shared-dma-pool";
+		reusable;
+		size = <0x3C00000>;
+		alignment = <0x0 0x00010000>;
+		alloc-ranges = <0x9 0x80000000 0x80000000>,
+			       <0x9 0x00000000 0x80000000>,
+			       <0x8 0x80000000 0x80000000>,
+			       <0x0 0x80000000 0x80000000>;
+		status = "disabled";
+	};
+
+	farawimg: farawimg {
+		compatible = "shared-dma-pool";
+		reusable;
+		size = <0x10000000>;
+		alignment = <0x0 0x00010000>;
+		alloc-ranges = <0x9 0x80000000 0x80000000>,
+			       <0x9 0x00000000 0x80000000>,
+			       <0x8 0x80000000 0x80000000>,
+			       <0x0 0x80000000 0x80000000>;
+		status = "disabled";
+	};
+
+	faprev: faprev {
+		compatible = "shared-dma-pool";
+		reusable;
+		size = <0x3000000>;
+		alignment = <0x0 0x00010000>;
+		alloc-ranges = <0x9 0x80000000 0x80000000>,
+			       <0x9 0x00000000 0x80000000>,
+			       <0x8 0x80000000 0x80000000>,
+			       <0x0 0x80000000 0x80000000>;
+		status = "disabled";
 	};
 };
