arm64/dts: update battery INI
Bug: 197795522
Signed-off-by: Jenny Ho <hsiufangho@google.com>
Change-Id: I80a48d6a4d71e3c5c42219ba6953eca97c9c9cc2

--- a/arch/arm64/boot/dts/google/gs201-panther-battery.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-battery.dtsi
@@ -10,3 +10,9 @@
 	google,chg-battery-capacity = <4277>;
 };
 
+&max77759_fg {
+	/delete-property/ maxim,force-batt-id;
+	maxim,fg-data {
+		#include "gs201-panther-battery-data.dtsi"
+	};
+};
