Declare gxp/gs201's module dependencies
gxp/gs201 will soon depend on symbols exported by
edgetpu/janeiro/drivers/edgetpu. Add this dependency to the cloudripper
external modules list.

Bug: 198374045
Signed-off-by: John Scheible <johnscheible@google.com>
Change-Id: I55eef36646aaea35031b7ba63eff7aceef15f618

--- a/Makefile.ext_modules.cloudripper
+++ b/Makefile.ext_modules.cloudripper
@@ -59,4 +59,6 @@ power/reset: | bms
 # TODO(b/198105924): Identically named kernel modules: snd-soc-wm-adsp.ko
 amplifiers/cs35l45: | amplifiers/cs35l41
 
+gxp/gs201: | edgetpu/janeiro/drivers/edgetpu
+
 include $(KERNEL_SRC)/Makefile.ext_modules.include
